Project

General

Profile

Actions

Bug #7232

closed

StringIO#gets(nil, nil) raises TypeError, IO/File#gets do not

Bug #7232: StringIO#gets(nil, nil) raises TypeError, IO/File#gets do not

Added by brixen (Brian Shirai) almost 14 years ago. Updated over 13 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 1.9.3p286 (2012-10-12 revision 37165) [x86_64-darwin10.8.0]
Backport:
[ruby-core:48531]

Description

Is this a bug?

sasha:rubinius brian$ irb
1.9.3p286 :001 > require 'stringio'
=> true
1.9.3p286 :002 > s = StringIO.new "abc"
=> #StringIO:0x000001008b3d90
1.9.3p286 :003 > s.gets nil, nil
TypeError: no implicit conversion from nil to integer
from (irb):3:in gets' from (irb):3 from /Users/brian/.rvm/rubies/ruby-1.9.3-p286/bin/irb:16:in

'

sasha:rubinius brian$ irb
1.9.3p286 :001 > f = File.open "foobar.txt"
=> #File:foobar.txt
1.9.3p286 :002 > io = IO.new f.fileno
=> #<IO:fd 5>
1.9.3p286 :003 > io.gets nil, nil
=> "ありがとう\n"
1.9.3p286 :004 > f.rewind
=> 0
1.9.3p286 :005 > f.gets nil, nil
=> "ありがとう\n"

Thanks,
Brian


Files

patch.diff (966 Bytes) patch.diff Glass_saga (Masaki Matsushita), 12/25/2012 01:16 PM

Updated by usa (Usaku NAKAMURA) over 13 years ago Actions #1 [ruby-core:51057]

  • Category set to ext
  • Status changed from Open to Assigned
  • Assignee set to nobu (Nobuyoshi Nakada)
  • Target version set to 2.0.0

can reproduce with current trunk.

Updated by Glass_saga (Masaki Matsushita) over 13 years ago Actions #2 [ruby-core:51122]

How about the patch?

Updated by Anonymous over 13 years ago Actions #3

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r38630.
Brian, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • ext/stringio/stringio.c (strio_getline): fix not to raise TypeError
    when limit is nil.
    [Bug #7232] [ruby-core:48531]

  • test/stringio/test_stringio.rb: a test for above.

Actions

Also available in: PDF Atom